log
Sat 30 Mar 2024 03:50:41 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
e25d341
Sat 30 Mar 2024 03:51:02 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
663f742
Sat 30 Mar 2024 03:53:05 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5ad4719
Sat 30 Mar 2024 03:53:28 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:12: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   43 |     return *(list->head);
      |            ^~~~~~~~~~~~~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7260d94
Sat 30 Mar 2024 03:54:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ed2827b
Sat 30 Mar 2024 03:54:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2b49319
Sat 30 Mar 2024 03:55:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9764640
Sat 30 Mar 2024 03:59:10 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c003f39
Sat 30 Mar 2024 03:59:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
44040fc
Sat 30 Mar 2024 03:59:51 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
list.c: In function ‘firstList’:
cc1: error: function may return address of local variable [-Werror=return-local-addr]
In file included from test.c:5:
list.c:43:7: note: declared here
   43 |   int a = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
272a44f
Sat 30 Mar 2024 04:00:56 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:4: error: ‘J’ undeclared (first use in this function)
   44 |   *J = 0;
      |    ^
list.c:44:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a717ac8
Sat 30 Mar 2024 04:01:03 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
693ab6b
Sat 30 Mar 2024 04:01:18 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:12: error: ‘j’ undeclared (first use in this function)
   43 |     return j;
      |            ^
list.c:43:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4aa21f9
Sat 30 Mar 2024 04:01:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
22dce55
Sat 30 Mar 2024 04:03:04 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
66f2f2f
Sat 30 Mar 2024 04:03:37 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b1fc045
Sat 30 Mar 2024 04:04:35 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
c9f3502
Sat 30 Mar 2024 04:06:41 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
2ae211f
Sat 30 Mar 2024 04:08:31 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|5
total_score: 15/70
1169714
Sat 30 Mar 2024 04:09:17 AM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
4fe7f81
Sat 30 Mar 2024 04:10:37 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
2ef51ff
Sat 30 Mar 2024 04:11:52 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
bf38c40
Sat 30 Mar 2024 04:14:09 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
a94f346
Sat 30 Mar 2024 04:16:33 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
b008452
Sat 30 Mar 2024 04:23:10 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
ce22dbe
Sat 30 Mar 2024 04:24:12 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3e7dd48
Sat 30 Mar 2024 04:27:55 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
d731423
Sat 30 Mar 2024 04:28:51 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|1
total_score: 55/70
3bca777
Sat 30 Mar 2024 04:44:21 AM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
b6a84a5
Sat 30 Mar 2024 04:45:52 AM UTC: 
 list.c | 11 -----------
 1 file changed, 11 deletions(-)
 tests:  11|1
total_score: 55/70
fd92acf
Sat 30 Mar 2024 04:50:55 AM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
22fc903
Sat 30 Mar 2024 04:56:43 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
a30deab
Sat 30 Mar 2024 05:07:11 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  12|0
total_score: 70/70
313e2a3
Sat 30 Mar 2024 05:09:34 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  12|0
total_score: 70/70
f0062af
Sat 30 Mar 2024 05:15:50 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:111:5: error: ‘else’ without a previous ‘if’
  111 |     else if(list->head == list->current){
      |     ^~~~
list.c:110:13: error: unused variable ‘aux’ [-Werror=unused-variable]
  110 |       void *aux = list->current->data;
      |             ^~~
cc1: all warnings being treated as errors
Compilation failed
16b535b
Sat 30 Mar 2024 05:16:19 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:111:11: error: unused variable ‘aux’ [-Werror=unused-variable]
  111 |     void *aux = list->current->data;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
6c45628
Sat 30 Mar 2024 05:18:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
3e96b5a
Sat 30 Mar 2024 05:24:52 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  12|0
total_score: 70/70
c95e89f
Sat 30 Mar 2024 05:26:26 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  12|0
total_score: 70/70
4f65873
Sat 30 Mar 2024 05:31:57 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|0
total_score: 70/70
b4ff64e
